--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
-    "@yandex/ui": "^3.5.6",
+    "@yandex/ui": "3.10.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
